# FlutterPianoApp

./: .gitignore  CMakeLists.txt  README.md  pubspec.yaml
lib/: main.dart
lib/cpp_tools/: MicrophoneListener.cpp  MicrophoneListener.h
lib/cpp_tools/cpp_tests/: MicrophoneListenerTests.cpp  MicrophoneListenerTests.h
lib/dart_tools/: listener.dart  piano_artist.dart  piano_widget.dart
lib/pages/: all_pages_barrel.dart  custom_practice_option_select_screen.dart  home_screen.dart  sight_reading_level_select_screen.dart  start_screen.dart  synthesia.dart
